# flatten_it

./: README.md  main.ipynb  pyproject.toml
examples/: main.ipynb
src/flatten/: __init__.py  flatten.py
