[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatten"
dynamic = ["version"]
authors = [
  { name="Adam Patterson", email="adam@farar.net" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faranalytics/flatten.git"
"Bug Tracker" = "https://github.com/faranalytics/flatten/issues"

[tool.hatch.version]
path = "src/flatten/__about__.py"